# docs/swagger.json
@@ -5,21 +5,143 @@
         "license": {}
     },
     "paths": {
-        "/api/user/:id": {
+        "/api/v1/admin/user": {
             "get": {
                 "security": [
                     {
                         "": []
                     }
                 ],
-                "description": "获取用户",
+                "description": "获取用户列表",
                 "tags": [
-                    "api"
+                    "api/v1/admin/user"
                 ],
-                "summary": "获取用户",
+                "summary": "获取用户列表",
                 "responses": {
                     "200": {
-                        "description": "{\"message\": \"pong\"}",
+                        "description": "{\"code\":200600,\"msg\": \"成功！\",\"data\":[]}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/admin/user/:id": {
+            "get": {
+                "security": [
+                    {
+                        "": []
+                    }
+                ],
+                "description": "获取指定用户",
+                "tags": [
+                    "api/v1/admin/user"
+                ],
+                "summary": "获取指定用户",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "用户id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": \"200600\",\"msg\":\"成功！\",\"data\":[]}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/login": {
+            "post": {
+                "security": [
+                    {
+                        "": []
+                    }
+                ],
+                "description": "用户登录",
+                "tags": [
+                    "api/v1/login"
+                ],
+                "summary": "用户登录",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200600,\"msg\": \"成功!\",\"data\":[]}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/notebook": {
+            "get": {
+                "security": [
+                    {
+                        "": []
+                    }
+                ],
+                "description": "获取我的笔记本列表",
+                "tags": [
+                    "api/v1/notebook"
+                ],
+                "summary": "获取我的笔记本列表",
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200600,\"msg\": \"成功!\",\"data\":[]}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/notebook/:id": {
+            "get": {
+                "security": [
+                    {
+                        "": []
+                    }
+                ],
+                "description": "获取我的指定笔记本",
+                "tags": [
+                    "api/v1/notebook"
+                ],
+                "summary": "获取我的指定笔记本",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "笔记本id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200600,\"msg\": \"成功!\",\"data\":[]}",
                         "schema": {
                             "type": "string"
                         }
